# ON_processing_stl_metrics

./: .gitignore  .gitmodules  100k_faces.cleaned.surf.report.json  100k_faces.cleaned.surf.skeleton_metrics.csv  100k_faces.tet.report.json  pyproject.toml
scripts/: __init__.py  cleanup_stl.py  skeletonize_stl_metrics.py  tet_mesh_gmsh.py  visualize_tet_mesh.py
tests/: test_skeletonize_stl_metrics.py
