[project]
name = "processing-stl"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "gmsh>=4.15.2",
    "matplotlib>=3.11.0",
    "meshio>=5.3.5",
    "numpy>=2.4.6",
    "pymeshfix>=0.18.1",
    "pyvista>=0.48.4",
    "rich>=15.0.0",
    "scipy>=1.17.1",
    "trimesh>=4.12.2",
    "vtk>=9.6.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
